# camayoc

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yaml  AI_POLICY.rst  AUTHORS.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  Makefile  README.md  README.rst  codecov.yml  example_config.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: issue_template.md
.github/workflows/: docs.yml  forbid-fixup-commits.yaml  lint.yml  tests.yml
camayoc/: __init__.py  api.py  cli.py  command.py  config.py  constants.py  data_provider.py  db_serializer.py  db_snapshot.py  exceptions.py  inventory.py  pytest_plugin.py  qcs_models.py  qpc_models.py  utils.py
camayoc/tests/: __init__.py  conftest.py  utils.py
camayoc/tests/qcs/: __init__.py  conftest.py  test_credentials.py  test_host_cred.py  test_net_prof.py  test_profiles.py  test_scan.py  test_sources.py  utils.py
camayoc/tests/qcs/api/credentials/: __init__.py  test_creds_common.py  test_network_creds.py
camayoc/tests/qcs/api/network/: __init__.py  test_network_creds.py
camayoc/tests/qcs/api/satellite/: __init__.py  test_sat_creds.py
camayoc/tests/qcs/api/sources/: __init__.py  test_network_sources.py  test_sources_common.py  test_vcenter_sources.py
camayoc/tests/qcs/api/v1/: __init__.py  conftest.py  utils.py
camayoc/tests/qcs/api/v1/authentication/: test_login.py
camayoc/tests/qcs/api/v1/credentials/: test_creds_common.py  test_manager_creds.py  test_network_creds.py
camayoc/tests/qcs/api/v1/reports/: __init__.py  test_reports.py
camayoc/tests/qcs/api/v1/scanjobs/: __init__.py  test_run_scanjobs.py
camayoc/tests/qcs/api/v1/scans/: test_multi_source_scans.py  test_network_scans.py  test_satellite_scans.py  test_scans_common.py  test_vcenter_scans.py  utils.py
camayoc/tests/qcs/api/v1/sources/: test_manager_sources.py  test_network_sources.py  test_sources_common.py
camayoc/tests/qcs/api/vcenter/: __init__.py  test_vcenter_creds.py
camayoc/tests/qcs/cli/: __init__.py  conftest.py  test_credentials.py  test_scanjobs.py  test_scans.py  test_sources.py  utils.py
camayoc/tests/qcs/ui/: __init__.py  conftest.py  test_login.py  views.py
camayoc/tests/qpc/: __init__.py  conftest.py  utils.py
camayoc/tests/qpc/api/: __init__.py  test_dsc_426.py
camayoc/tests/qpc/api/v1/: conftest.py  utils.py
camayoc/tests/qpc/api/v1/authentication/: __init__.py  test_login.py
camayoc/tests/qpc/api/v1/credentials/: test_creds_common.py  test_manager_creds.py  (+1 more)
camayoc/tests/qpc/cli/: conftest.py  csv_report_parsing.py  ocp.py  test_credentials.py  test_endtoend.py  test_openshift.py  test_reports.py  test_rhacs.py  test_scanjobs.py  test_scans.py  test_sources.py  utils.py
camayoc/tests/qpc/snapshots/: test_compare.py
camayoc/tests/qpc/ui/: conftest.py  test_credentials.py  test_endtoend.py  test_login.py  test_long_running.py  test_playwright_demo.py  test_scans.py  test_sources.py  utils.py  views.py
camayoc/tests/qpc/yupana/: conftest.py  test_config.py  test_connect.py  utils.py
camayoc/tests/remote/: __init__.py  conftest.py  utils.py
camayoc/tests/remote/quipucords/: __init__.py  test_scan.py
camayoc/tests/remote/rho/: __init__.py  conftest.py  test_scan.py
camayoc/tests/rho/: __init__.py  test_auth.py  test_fact.py  test_options.py  test_profile.py  test_scan.py  utils.py
camayoc/types/: scans.py  settings.py  ui.py
camayoc/ui/: __init__.py  client.py  data_factories.py  data_providers.py  decorators.py  enums.py  session.py  types.py
camayoc/ui/models/: fields.py  mixins.py
camayoc/ui/models/components/: add_new_dropdown.py  form.py  items_list.py  logged_in.py  modal.py  popup.py  toasts.py  vertical_navigation.py  wizard.py
camayoc/ui/models/pages/: abstract_page.py  credentials.py  login.py  overview.py  scans.py  sources.py
docs/: Makefile  api.rst  conf.py  development.rst  index.rst  test_scenarios.rst
docs/_static/: custom.css
docs/_templates/: breadcrumbs.html  layout.html
docs/api/: camayoc.api.rst  camayoc.cli.rst  camayoc.command.rst  camayoc.config.rst  camayoc.constants.rst  camayoc.data_provider.rst  camayoc.exceptions.rst  camayoc.inventory.rst  camayoc.qcs_models.rst  camayoc.qpc_models.rst  camayoc.rst  camayoc.tests.conftest.rst  camayoc.tests.qcs.api.credentials.rst  camayoc.tests.qcs.api.credentials.test_creds_common.rst  camayoc.tests.qcs.api.credentials.test_network_creds.rst  camayoc.tests.qcs.api.credentials.test_sat_creds.rst  camayoc.tests.qcs.api.credentials.test_vcenter_creds.rst  camayoc.tests.qcs.api.network.rst  camayoc.tests.qcs.api.network.test_network_creds.rst  camayoc.tests.qcs.api.network.test_network_scans.rst  camayoc.tests.qcs.api.network.test_network_sources.rst  camayoc.tests.qcs.api.rst  camayoc.tests.qcs.api.satellite.rst  camayoc.tests.qcs.api.satellite.test_sat_creds.rst  camayoc.tests.qcs.api.scans.rst  camayoc.tests.qcs.api.scans.test_network_scans.rst  camayoc.tests.qcs.api.sources.rst  camayoc.tests.qcs.api.sources.test_network_sources.rst  camayoc.tests.qcs.api.sources.test_sources_common.rst  camayoc.tests.qcs.api.sources.test_vcenter_sources.rst  camayoc.tests.qcs.api.v1.authentication.rst  camayoc.tests.qcs.api.v1.authentication.test_login.rst  camayoc.tests.qcs.api.v1.conftest.rst  camayoc.tests.qcs.api.v1.credentials.rst  camayoc.tests.qcs.api.v1.credentials.test_creds_common.rst  camayoc.tests.qcs.api.v1.credentials.test_manager_creds.rst  camayoc.tests.qcs.api.v1.credentials.test_network_creds.rst  camayoc.tests.qcs.api.v1.reports.rst  camayoc.tests.qcs.api.v1.reports.test_reports.rst  camayoc.tests.qcs.api.v1.rst  (+120 more)
docs/development/: openshift.rst  ui.rst
scripts/: check-server-online.py  configure-camayoc.yaml  create-camayoc-ocp-config.py  gen_api_docs.sh  gen_config.py  get-version.py  openshift_deploy.yaml  power_control.py  provision_ocp_instance.yaml  reports.py  snapshot-data.py  validate_docstrings.sh  validate_settings.py
tests/: __init__.py  test_api.py  test_cli.py  test_command.py  test_config.py  test_data_provider.py  test_scan_container.py  test_settings.py  test_utils.py
(+8 files in other folders)
