[tool.poetry]
name = "camayoc"
version = "1.2.6"
description = "A GPL-licensed Python library that facilitates functional testing of Quipucords."
authors = ["Quipucords Dev Team <quipucords@redhat.com>"]
readme = "README.rst"
license = "GPLv3"
repository = "https://github.com/quipucords/camayoc"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.dependencies]
python = "~3.11"
attrs = "^23.1.0"
dynaconf = "^3.2.4"
factory_boy = "^3.2.1"
littletable = "^2.2.0"
pexpect = "^4.8.0"
# playwright needs to download browsers. We do that during Jenkins agent image
# generation to save time during execution, but that means we need to keep
# version here in sync with version used when generating images
playwright = "1.40.0"
pydantic = "^2.6.3"
pytest = "^7.4.3"
pytest-ibutsu = "^2.2.4"
pytest-playwright = "^0.4.3"
pyxdg = "^0.28"
pyyaml = "^6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# For `make test-coverage`
pytest-cov = "^4.0.0"
# For `make validate-docstrings`
testimony = "^2.2.0"
# For `make pre-commit`
pre-commit = "^3.3.2"
black = "^23.3.0"
isort = "^5.11.4"
ruff = "^0.0.270"

[tool.poetry.group.jenkins]
optional = true

[tool.poetry.group.jenkins.dependencies]
qpc = {path = "../qpc", develop = true}
koji = "^1.33.0"

[tool.black]
target-version = ['py311']
line-length = 100

[tool.pytest.ini_options]
filterwarnings = "ignore::urllib3.exceptions.InsecureRequestWarning"
markers = [
    "ssh_keyfile_path: mark test with SSH key file path mapped to /sshkeys/ on the server (deselect with '-m \"not ssh_keyfile_path\"')",
    "runs_scan: tests that run scans (might be slow!)",
]

[tool.ruff]
select = [
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "PL",  # Pylint
    "BLE", # flake8-blind-except
]
ignore = [
    "D203",
    "D403",
    "PLR2004",

    # for now, ignore missing docstrings
    "D100",
    "D101",
    "D102",
    "D103",
    "D106",
    "D107",
]
src = [
    "camayoc",
    "tests",
]
target-version = "py311"
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"**/test_*.py" = [
    "PLC1901",
    "PLR2004",
    "C901",
]
"camayoc/data_provider.py" = ["PLW2901"]
"camayoc/qpc_models.py" = ["PL", "C901"]
"camayoc/tests/qpc/ui/conftest.py" = ["BLE001"]
"camayoc/tests/qpc/utils.py" = ["PLW2901"]
"tests/test_command.py" = ["F401"]

[tool.ruff.isort]
force-single-line = true
known-first-party = [
    "camayoc",
]


[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "pep257"
