[metadata]
name = camayoc
version = 1.0.0
author = Quipucords Team
author_email = quipucords@redhat.com
url = https://github.com/quipucords/camayoc
description = A GPL-licensed Python library that facilitates functional testing of Quipucords.
long_description = file: README.rst
license = GPLv3
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance

[options]
python_requires = >=3.9
install_requires =
    attrs
    dynaconf
    factory_boy
    pexpect
    playwright
    plumbum
    pytest>=3.6
    pytest-playwright
    pyvmomi
    pyxdg
    pyyaml
    widgetastic.core
    widgetastic.patternfly

[options.extras_require]
dev =
    # For `make docs`
    sphinx
    jinja2==3.0.3
    # For `make docs-serve`
    sphinx-serve
    # For `make lint`
    flake8
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    # For `make package`
    wheel
    # For `make package-upload`
    twine
    # pydocstyle specific version till bug fixed
    # See here: https://gitlab.com/pycqa/flake8-docstrings/issues/36
    pydocstyle==3.0.0
    # For `make test-coverage`
    pytest-cov
    # For `make validate-docstrings`
    testimony
    # For `make pre-commit`
    pre-commit
    black
